Follow-up from "Improve Performance When Opening the Properties of a Large Number of Files"
The following discussion from !1375 (merged) should be addressed:
-
@antoniof started a discussion: This doesn't make sense. If
file->details->filesystem_info_is_up_to_date
is TRUE, we wouldn't ever reach this else branch.Anyway, I think this whole commit is wrong and should be reverted. We should look at the parent of the file for fs info, not the file itself.
This is important for the cases where the file is a mount into another file system, but what we want is the information about the fs where the mountpoint is.