file: add parent param to remote+preview method

Allow passing a file's parent to get_filesystem_use_preview and
get_filesystem_remote. This resolves the multi-level parent checking
discussed in [1], by only checking one parent at most.

[1] https://gitlab.gnome.org/GNOME/nautilus/-/issues/3336